--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,16 @@
   min-height: 100vh; /* Ocupa toda la pantalla */
 }
 
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  padding-bottom: var(--spacing-m);
+}
+
 header {
   width: 100%;
   background-color: var(--color-accent-1);
